# VigInt

./: .aider.chat.history.md  .aider.input.history  .dockerignore  .env.client_template  .env.example  .gitignore  ADDITIONAL_FILES_RECOVERED.md  ADMIN_API_SETUP.md  API_KEYS_EXPLAINED.md  ARCHITECTURE_CLIENT_ISOLATION.md  AUTOMATIC_CLEANUP.md  CLEANUP_SETUP_COMPLETE.md  CLIENT_AUTHENTICATION_GUIDE.md  CLIENT_MINIMAL_SETUP.md  COMPLETE_RECOVERY_SUMMARY.md  DEDUPLICATION_DEBUG.md  DEPLOYMENT_ENVIRONMENT_VARIABLES.md  DEPLOY_TO_RENDER.md  DISTRIBUTED_DEPLOYMENT.md  DISTRIBUTED_DEPLOYMENT_SUMMARY.md  DISTRIBUTED_MODE_STATUS.md  DUAL_BUFFER_FINAL_SOLUTION.md  DUAL_BUFFER_SOLUTION.md  DUAL_BUFFER_SUCCESS_SUMMARY.md  DUAL_BUFFER_VETO_SYSTEM.md  DUAL_MODEL_CONFIGURATION.md  DUPLICATE_EMAIL_FIX.md  Dockerfile  EMAIL_ROUTING_UPDATE.md  FINAL_SYSTEM_STATUS.md  FIX_INVALID_TOKEN_NOW.md  FRENCH_EMAIL_FIX_COMPLETE.md  HASH_SENSITIVITY_FIX.md  IMPLEMENTATION_SUMMARY.md  INCIDENT_TYPE_FIX_COMPLETE.md  INCIDENT_TYPE_FIX_SUMMARY.md  INFRASTRUCTURE_FIXES_COMPLETE.md  MIGRATION_CHECKLIST.md  MIGRATION_STEP_BY_STEP.md  MISSING_FEATURES_ANALYSIS.md  (+179 more)
.aider.tags.cache.v3/: cache.db-shm  cache.db-wal
.kiro/specs/dual-buffer-video-analysis/: design.md  requirements.md  tasks.md
Vigint/: README.md
local_videos/: incident_HIGH_20250925_152759_2806e1c2.mp4.json  incident_LOW_20250925_152802_67e5048d.mp4.json  incident_MEDIUM_20250925_152759_5293df5c.mp4.json
vigint/: __init__.py  app.py  billing_manager.py  invoice_generator.py  models.py
